# EV4-Shared-Contracts

./: .gitignore  AGENTS.md  README.md  Start-EV4-Project-Gate.bat  agents.me  package.json  pyproject.toml
docs/: ARCHITECTURE.md  BEHAVIORAL_RULE_COVERAGE.md  BUILDER_TO_RESPONSIVE_FREEZE_MATRIX.md  CE_TO_BUILDER_FREEZE_MATRIX.md  COMMON_CONTRACT_VENDORING.md  COMPATIBILITY_MAP.md  CONTRACT_INVENTORY.md  CONTRACT_INVENTORY_PROMPT_00.md  DIAGNOSTIC_CODES.md  DIAGNOSTIC_GUIDE.md  E2E_DEMO_WORKFLOW.md  EV4_PROJECT_GATE_STATUS.md  EV4_SHARED_CONTRACTS_STATUS.md  EVIDENCE_TRUTH_SPINE.md  GOVERNANCE.md  GUI_PRODUCER_A2C_OPERATOR_GUIDE.md  IMPLEMENTATION_STATUS.yaml  IMPLEMENTATION_STATUS_PROMPT_00.yaml  KROAD_011_PROJECT_GATE_INTAKE.md  LLM_IMPLEMENTATION_PROMPT_PLAN.md  LOCAL_OPERATOR_PANEL_QUICK_START.fa.md  LOCAL_OPERATOR_PANEL_USER_GUIDE.fa.md  LOCAL_REPOSITORY_PREFLIGHT.md  LOCAL_SETUP_GUIDE.md  LOCK_MANIFEST_POLICY.md  MIGRATION_READINESS_CHECKLIST.md  OPERATOR_GUIDE.md  OPERATOR_PANEL_MANUAL_QA.md  OPERATOR_PANEL_UX_CONTRACT.md  PERSIAN_RTL_UI_CONTRACT.md  PERSONAL_USE_GUIDE.md  PG_A2C_OPERATOR_WORKFLOW.md  PG_C2B_OPERATOR_WORKFLOW.md  PG_INT_OPERATOR_WORKFLOW.md  PROJECT_GATE_WORKFLOW.md  PROMOTION_RULES.md  REPORT_UX_CONTRACT.md  RESULT_MODEL.md  ROLE_BOUNDARY_MAP.md  SERVICE_LAYER.md  (+9 more)
fixtures/: README.md
outputs/: README.md
planning/: DECISION_ESCAPE_ROUTES.yml  decision-escape-routes.schema.json
schemas/: README.md
scripts/: README.md  bootstrap-prompt05-repair.py  ce-to-builder-smoke.py  check-capability-truth.py  check-github-action-pinning.py  status.js  (+22 more)
(+312 files in other folders)
